<resources>
    <string name="app_name">Yatti</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="titulo_login">Purificadora Yaati</string>
    <string name="usuario_login">Usuario</string>
    <string name="contraseña_login">Contraseña</string>
    <string name="recuperar_login">Recuperar Contraseña</string>
    <string name="registrarse_login">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu_cliente">menu_cliente</string>
    <string name="title_activity_menu_administracion">menu_administracion</string>
    <string name="title_activity_menu_ventas">menu_ventas</string>
    <string name="title_activity_menu_fabrica">menu_fabrica</string>

    <string name="nombre_pantalla_solservi">Nombre:</string>
    <string name="cantidad_garrafones_pantalla_solservi">Cantidad de Garrafones:</string>
    <string name="geoposicionamiento_pantalla_solservi">Geoposicionamiento:</string>

    <string name="cantidad_garrafon_lav">Cantidad de garrafones lavados:</string>

    <string name="cargo_entradas_salidas">Cargo:</string>
    <string name="hora_entrada">Hoara de entrada:</string>
    <string name="hora_inicio_ruta">Hora de inicio a ruta:</string>
    <string name="hora_venta">Hora de venta:</string>
    <string name="hora_abastecimiento">Hora de abastecimiento:</string>
    <string name="hora_salida">Hora de salida:</string>
    <string name="nom">Nombre:</string>
    <string name="fecha">Fecha:</string>


    <string name="fecha_quejas">Fecha:</string>
    <string name="hora_quejas">Hora:</string>
    <string name="quejas_quejas">Quejas:</string>
    <string name="sugerencia_quejas">Sugerencias:</string>

    <string name="nombre_vendedor">Nombre del Vendedor:</string>
    <string name="kilometraje">Kilometraje:</string>
    <string name="gasolina">Gasolina:</string>

    <string name="button_alta_personal">Alta Personal</string>
    <string name="button_alta_cliente">Alta Clientes</string>
    <string name="button_promociones">Promociones</string>

    <string name="fecha_nacimiento">Fecha de Nacimiento:</string>
    <string name="curp">Curp</string>
    <string name="direccion">Direccion:</string>
    <string name="telefono">Telefono:</string>
    <string name="perfil">Perfil:</string>
    <string name="observacion">Observaciones:</string>

    <string name="ciudad_txt">Ciudad:</string>
    <string name="colonia_txt">Colonia:</string>
    <string name="Calle_txt">Calle:</string>
    <string name="numero_casa_txt">Numero de Casa:</string>
    <string name="ubicacion_txt">Ubicacion:</string>
    <string name="title_activity_entrada_salida_venta">entrada_salida_venta</string>

    <!--String de la pantalla de control de medicion fabrica-->
    <string name="txtencabezadomedicion">CONTROL DE MEDICION DE FILTROS Y OSMOSIS:</string>
    <string name="txtnombrePersonalcontrol">Nombre personal:</string>
    <string name="txtfechacontrol">Fecha:</string>
    <string name="txthoracontrol">Hora:</string>
    <string name="txtseleccionar">Seleccionar opcion:</string>
    <string name="txtph">PH:</string>
    <string name="txtcloro">Cloro:</string>
    <string name="txtsolido">Solidos Disueltos:</string>
    <string name="txtdureza">Dureza:</string>

    <!--String de la pantalla de retrolavado y regeneracion fabrica-->
    <string name="txtencabezadoretrolavado">RETROLAVADO Y REGENERACION</string>
    <string name="txtnombrePersonalR">Nombre personal:</string>
    <string name="txtfecharetroege">Fecha:</string>
    <string name="txthoraretrorege">Hora:</string>
    <string name="txtretrolavado">Retrolavado:</string>
    <string name="txtregeneracion">Regeneracion:</string>
    <string name="checkarena">Arena</string>
    <string name="checkcarbon">Carbòn</string>
    <string name="checksuavizante">Suavizante</string>

    <!--String de pantalla de botellones fabrica-->
    <string name="txtencabezadobotellones">BOTELLONES</string>
    <string name="txtcodigo">Codigo:</string>
    <string name="txtfechaalta">Fecha alta:</string>
    <string name="txtestatus">Estutus:</string>
    <string name="txtdescripcion">Descripcion:</string>

    <!--String de pantalla de control de fabricacion-->
    <string name="txtencabezadofabricacion">Nombre:</string>
    <string name="txtfechafabricacion">Fecha:</string>
    <string name="txthorafabricacion">Hora:</string>
    <string name="txtnombrefabricacion">Nombre:</string>
    <string name="txtcantidad">Cantidad de garrafones:</string>
    <string name="txtgarrafonespuri">Garrafones purificados:</string>
    <string name="txtentregavendedor">Garrafones entregados al vendedor:</string>
    <string name="txtrecibidavendedor">Garrafones recibidos del vendedor:</string>
    <string name="txtobeservacion">Observaciones:</string>

    <string name="nom_promocion_txt">Nombre Promocion:</string>
    <string name="fecha_inicio_txt">Fecha de Inicio:</string>
    <string name="fecha_fin_txt">Fecha Fin:</string>

    <string name="mantenimiento_button">Mantenimeinto</string>
    <string name="inventarios_button">Inventarios</string>
    <string name="corte_dia_button">Corte del Dia</string>

    <string name="equipos_materiales_txt">Equipos y Materiales</string>
    <string name="fecha_registro_txt">Fecha de registro:</string>
    <string name="descripcion_txt">Descripcion:</string>

    <string name="alta_materiales_txt">Alta de Materiales</string>
    <string name="cantidad_txt">Cantidad:</string>

    <string name="cantidad_vendida_txt">Cantidad vendida:</string>
    <string name="total_venta_txt">Total de venta:</string>
    <string name="credito_txt">Credito:</string>
    <string name="sobrante_txt">Sobrante:</string>

    <string name="fecha_entrega_txt">Fecha de entrega:</string>

    <!--String pantallas de censo de app purificadora(Fabrica) -->
    <string name="txtplanmarkiting">CENSO, PLAN DE MARKITING</string>
    <string name="txtcuestion1">1. ¿Cuál es tu opinión acerca del agua purificada embotellada?</string>
    <string name="radiobutton1">Es una necesidad</string>
    <string name="radiobutton2">Es un lujo</string>
    <string name="radiobutton3">Es un gasto</string>

    <string name="txtcuestion2">2. ¿Qué tipo de agua se toma en tu casa?</string>
    <string name="radiobutton4">Agua embotellada o de garrafon</string>
    <string name="radiobutton5">Agua de filtro</string>
    <string name="radiobutton6">Hervimos el agua</string>
    <string name="radiobutton7">Agua de la llave</string>

    <string name="txtcuestion3">3. ¿En qué presentaciones suelen comprar agua purificada en tu hogar?</string>
    <string name="radiobutton8">500 ml</string>
    <string name="radiobutton9">1 ltro</string>
    <string name="radiobutton10">1 ltro y 1/2</string>
    <string name="radiobutton11">2 ltros</string>
    <string name="radiobutton12">19 ltros</string>

    <string name="txtcuestion4">4. ¿De que purificadora de agua embotellada compras?</string>
    <string name="radiobutton13">Purificadora Aquetzali</string>
    <string name="radiobutton14">Purificadora Yaati</string>
    <string name="radiobutton15">Purificadora de vida</string>
    <string name="radiobutton16">Purificadora inmaculada Bety</string>
    <string name="radiobutton17">Purificadora San jeronimo</string>
    <string name="radiobutton18">Purificadora Jehova Jired</string>
    <string name="radiobutton20">Otros</string>

    <string name="txtcuestion5">5. ¿Qué tan frecuentemente compras agua embotellada?</string>
    <string name="radiobutton21">Diarios</string>
    <string name="radiobutton22">Cada 2 dias</string>
    <string name="radiobutton23">Cada semana</string>

    <string name="txtcuestion6">6. ¿Cuándo garrafones de agua compras con regularidad?</string>
    <string name="radiobutton24">2</string>
    <string name="radiobutton25">4</string>
    <string name="radiobutton26">6</string>
    <string name="radiobutton27">Otros</string>

    <string name="txtcuestion7">7. ¿Qué es lo mas importante para ti al momento de eligir una marca de agua purificada?</string>
    <string name="radiobutton28">El sabor del agua</string>
    <string name="radiobutton29">Que la marca sea conocida</string>
    <string name="radiobutton30">Que sea economico</string>
    <string name="radiobutton31">Ninguna, no compro agua</string>
    <string name="radiobutton32">El servicio</string>

    <string name="txtcuestion8">8. ¿Has comprado garrafones de agua con la purificadora yaati?</string>
    <string name="radiobutton33">Si</string>
    <string name="radiobutton34">No</string>

    <string name="txtcuestion9">9. ¿Cada cuándo pasa su proveedor a entregarle su agua?</string>
    <string name="radiobutton35">Diarios</string>
    <string name="radiobutton36">Cada 2 dias</string>
    <string name="radiobutton37">Cada semana</string>


    <string name="txtcuestion10">10. ¿Te gustaria que te premiaran por ser cliente frecuente de la purificadoras?</string>
    <string name="radiobutton39">Si</string>
    <string name="radiobutton40">No</string>

    <string name="txtcuestion11">11. ¿Te gustaria que te ofrecieran agua de sabor?</string>
    <string name="radiobutton41">Si</string>
    <string name="radiobutton42">No</string>

    <string name="txtcuestion12">11. ¿Qué sabor te interesa?</string>
    <!--fin-->
</resources>
